--- a/index.html
+++ b/index.html
@@ -1,16 +1,37 @@
-
 <!DOCTYPE html>
 <html lang="en" class="scroll-smooth">
   <head>
+    <!-- Google tag (gtag.js) -->
+    <script
+      async
+      src="https://www.googletagmanager.com/gtag/js?id=G-35T8BYGKVC"
+    ></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag() {
+        dataLayer.push(arguments);
+      }
+      gtag("js", new Date());
+
+      gtag("config", "G-35T8BYGKVC");
+    </script>
+
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="https://res.cloudinary.com/dph6mqggr/image/upload/v1763725673/logo_csnpk8.svg" />
+    <link
+      rel="icon"
+      type="image/svg+xml"
+      href="https://res.cloudinary.com/dph6mqggr/image/upload/v1763725673/logo_csnpk8.svg"
+    />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Gadgade Basic School | Nagarkot, Bhaktapur</title>
     <meta
       name="description"
       content="Official government, non-profit basic school in Gadgade, Nagarkot, Bhaktapur, Nepal. Providing quality, free education up to Grade 8. Serving our community."
     />
-    <meta name="keywords" content="Gadgade Basic School, basic school nepal, government school bhaktapur, free education nepal, nagarkot school, changunarayan school" />
+    <meta
+      name="keywords"
+      content="Gadgade Basic School, basic school nepal, government school bhaktapur, free education nepal, nagarkot school, changunarayan school"
+    />
     <meta name="robots" content="index, follow" />
     <link rel="canonical" href="https://gadgadeschool.edu.np/" />
 
@@ -23,47 +44,71 @@
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://gadgadeschool.edu.np/" />
-    <meta property="og:title" content="Gadgade Basic School | Nagarkot, Bhaktapur" />
-    <meta property="og:description" content="Official government, non-profit basic school providing quality, free education up to Grade 8 in Nagarkot, Bhaktapur." />
-    <meta property="og:image" content="https://res.cloudinary.com/dph6mqggr/image/upload/v1762218893/banner_cj0zgv.jpg" />
+    <meta
+      property="og:title"
+      content="Gadgade Basic School | Nagarkot, Bhaktapur"
+    />
+    <meta
+      property="og:description"
+      content="Official government, non-profit basic school providing quality, free education up to Grade 8 in Nagarkot, Bhaktapur."
+    />
+    <meta
+      property="og:image"
+      content="https://res.cloudinary.com/dph6mqggr/image/upload/v1762218893/banner_cj0zgv.jpg"
+    />
     <meta property="og:site_name" content="Gadgade Basic School" />
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image" />
     <meta property="twitter:url" content="https://gadgadeschool.edu.np/" />
-    <meta property="twitter:title" content="Gadgade Basic School | Nagarkot, Bhaktapur" />
-    <meta property="twitter:description" content="Official government, non-profit basic school providing quality, free education up to Grade 8 in Nagarkot, Bhaktapur." />
-    <meta property="twitter:image" content="https://res.cloudinary.com/dph6mqggr/image/upload/v1762218893/banner_cj0zgv.jpg" />
-    
+    <meta
+      property="twitter:title"
+      content="Gadgade Basic School | Nagarkot, Bhaktapur"
+    />
+    <meta
+      property="twitter:description"
+      content="Official government, non-profit basic school providing quality, free education up to Grade 8 in Nagarkot, Bhaktapur."
+    />
+    <meta
+      property="twitter:image"
+      content="https://res.cloudinary.com/dph6mqggr/image/upload/v1762218893/banner_cj0zgv.jpg"
+    />
+
     <!-- PWA -->
     <link rel="manifest" href="./manifest.json" />
     <meta name="theme-color" content="#0A2540" />
     <meta name="apple-mobile-web-app-capable" content="yes" />
-    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
+    <meta
+      name="apple-mobile-web-app-status-bar-style"
+      content="black-translucent"
+    />
     <meta name="apple-mobile-web-app-title" content="Gadgade School" />
-    <link rel="apple-touch-icon" href="https://res.cloudinary.com/dph6mqggr/image/upload/v1763725673/logo_csnpk8.svg" />
+    <link
+      rel="apple-touch-icon"
+      href="https://res.cloudinary.com/dph6mqggr/image/upload/v1763725673/logo_csnpk8.svg"
+    />
 
     <script type="application/ld+json">
-    {
-      "@context": "https://schema.org",
-      "@type": "School",
-      "name": "Gadgade Basic School",
-      "url": "https://gadgadeschool.edu.np/",
-      "logo": "https://res.cloudinary.com/dph6mqggr/image/upload/v1763725673/logo_csnpk8.svg",
-      "address": {
-        "@type": "PostalAddress",
-        "streetAddress": "Changunarayan-6",
-        "addressLocality": "Nagarkot",
-        "addressRegion": "Bhaktapur",
-        "addressCountry": "NP"
-      },
-      "contactPoint": {
-        "@type": "ContactPoint",
-        "telephone": "+977-01-6680145",
-        "contactType": "customer service",
-        "email": "admin@gadgadeschool.edu.np"
+      {
+        "@context": "https://schema.org",
+        "@type": "School",
+        "name": "Gadgade Basic School",
+        "url": "https://gadgadeschool.edu.np/",
+        "logo": "https://res.cloudinary.com/dph6mqggr/image/upload/v1763725673/logo_csnpk8.svg",
+        "address": {
+          "@type": "PostalAddress",
+          "streetAddress": "Changunarayan-6",
+          "addressLocality": "Nagarkot",
+          "addressRegion": "Bhaktapur",
+          "addressCountry": "NP"
+        },
+        "contactPoint": {
+          "@type": "ContactPoint",
+          "telephone": "+977-01-6680145",
+          "contactType": "customer service",
+          "email": "admin@gadgadeschool.edu.np"
+        }
       }
-    }
     </script>
 
     <script src="https://cdn.tailwindcss.com"></script>
@@ -122,13 +167,13 @@
       href="https://fonts.googleapis.com/css2?family=Lato:wght@400;700;900&family=Lora:wght@400;500;600;700&display=swap"
       rel="stylesheet"
     />
-  <link rel="stylesheet" href="/index.css">
-</head>
+    <link rel="stylesheet" href="/index.css" />
+  </head>
   <body
     class="bg-brand-cream text-text-dark dark:bg-brand-charcoal dark:text-text-light"
   >
     <div id="root"></div>
     <script type="module" src="./index.tsx"></script>
-  <script type="module" src="/index.tsx"></script>
-</body>
+    <script type="module" src="/index.tsx"></script>
+  </body>
 </html>
