--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
     <!-- PWA -->
     <link rel="manifest" href="./manifest.json" />
     <meta name="theme-color" content="#0A2540" />
-    <meta name="apple-mobile-web-app-capable" content="yes" />
+    <meta name="mobile-web-app-capable" content="yes" />
     <meta
       name="apple-mobile-web-app-status-bar-style"
       content="black-translucent"
@@ -181,7 +181,6 @@
       href="https://fonts.googleapis.com/css2?family=Lato:wght@400;700;900&family=Lora:wght@400;500;600;700&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="/index.css" />
   </head>
   <body
     class="bg-brand-cream text-text-dark dark:bg-brand-charcoal dark:text-text-light"
