--- a/index.html
+++ b/index.html
@@ -1,108 +1,64 @@
 <!DOCTYPE html>
 <html lang="en" class="scroll-smooth">
-  <head>
-    <!-- Google tag (gtag.js) -->
-    <script
-      async
-      src="https://www.googletagmanager.com/gtag/js?id=G-35T8BYGKVC"
-    ></script>
-    <script>
-      window.dataLayer = window.dataLayer || [];
-      function gtag() {
-        dataLayer.push(arguments);
-      }
-      gtag("js", new Date());
 
-      gtag("config", "G-35T8BYGKVC");
-    </script>
-    <!-- Google Tag Manager -->
-    <script>
-      (function (w, d, s, l, i) {
-        w[l] = w[l] || [];
-        w[l].push({ "gtm.start": new Date().getTime(), event: "gtm.js" });
-        var f = d.getElementsByTagName(s)[0],
-          j = d.createElement(s),
-          dl = l != "dataLayer" ? "&l=" + l : "";
-        j.async = true;
-        j.src = "https://www.googletagmanager.com/gtm.js?id=" + i + dl;
-        f.parentNode.insertBefore(j, f);
-      })(window, document, "script", "dataLayer", "GTM-KNTZH85D");
-    </script>
-    <!-- End Google Tag Manager -->
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="theme-color" content="#0A2540" />
 
-    <meta charset="UTF-8" />
-    <link
-      rel="icon"
-      type="image/svg+xml"
-      href="https://res.cloudinary.com/dph6mqggr/image/upload/v1763725673/logo_csnpk8.svg"
-    />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Gadgade Basic School | Nagarkot, Bhaktapur</title>
-    <meta
-      name="description"
-      content="Official government, non-profit basic school in Gadgade, Nagarkot, Bhaktapur, Nepal. Providing quality, free education up to Grade 8. Serving our community."
-    />
-    <meta
-      name="keywords"
-      content="Gadgade Basic School, basic school nepal, government school bhaktapur, free education nepal, nagarkot school, changunarayan school"
-    />
-    <meta name="robots" content="index, follow" />
-    <link rel="canonical" href="https://gadgadeschool.edu.np/" />
+  <title>Gadgade Basic School | Nagarkot, Bhaktapur</title>
 
-    <!-- Geo Tags for Local SEO -->
-    <meta name="geo.region" content="NP-BA" />
-    <meta name="geo.placename" content="Nagarkot" />
-    <meta name="geo.position" content="27.7192;85.5143" />
-    <meta name="ICBM" content="27.7192, 85.5143" />
+  <meta name="description"
+    content="Official government, non-profit basic school in Gadgade, Nagarkot, Bhaktapur, Nepal. Providing quality, free education up to Grade 8. Serving our community." />
+  <meta name="keywords"
+    content="Gadgade Basic School, basic school nepal, government school bhaktapur, free education nepal, nagarkot school, changunarayan school" />
+  <meta name="robots" content="index, follow" />
+  <link rel="canonical" href="https://gadgadeschool.edu.np/" />
 
-    <!-- Open Graph / Facebook -->
-    <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://gadgadeschool.edu.np/" />
-    <meta
-      property="og:title"
-      content="Gadgade Basic School | Nagarkot, Bhaktapur"
-    />
-    <meta
-      property="og:description"
-      content="Official government, non-profit basic school providing quality, free education up to Grade 8 in Nagarkot, Bhaktapur."
-    />
-    <meta
-      property="og:image"
-      content="https://res.cloudinary.com/dph6mqggr/image/upload/v1762218893/banner_cj0zgv.jpg"
-    />
-    <meta property="og:site_name" content="Gadgade Basic School" />
+  <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
+  <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
+  <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
+  <link rel="manifest" href="/site.webmanifest" />
+  <link rel="shortcut icon" href="/favicon.ico" />
 
-    <!-- Twitter -->
-    <meta property="twitter:card" content="summary_large_image" />
-    <meta property="twitter:url" content="https://gadgadeschool.edu.np/" />
-    <meta
-      property="twitter:title"
-      content="Gadgade Basic School | Nagarkot, Bhaktapur"
-    />
-    <meta
-      property="twitter:description"
-      content="Official government, non-profit basic school providing quality, free education up to Grade 8 in Nagarkot, Bhaktapur."
-    />
-    <meta
-      property="twitter:image"
-      content="https://res.cloudinary.com/dph6mqggr/image/upload/v1762218893/banner_cj0zgv.jpg"
-    />
+  <meta name="apple-mobile-web-app-capable" content="yes" />
+  <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
+  <meta name="apple-mobile-web-app-title" content="Gadgade School" />
 
-    <!-- PWA -->
-    <link rel="manifest" href="./manifest.json" />
-    <meta name="theme-color" content="#0A2540" />
-    <meta name="mobile-web-app-capable" content="yes" />
-    <meta
-      name="apple-mobile-web-app-status-bar-style"
-      content="black-translucent"
-    />
-    <meta name="apple-mobile-web-app-title" content="Gadgade School" />
-    <link
-      rel="apple-touch-icon"
-      href="https://res.cloudinary.com/dph6mqggr/image/upload/v1763725673/logo_csnpk8.svg"
-    />
+  <link rel="stylesheet" href="/index.css" />
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+  <link rel="preload" href="https://fonts.gstatic.com/s/lato/v24/S6u9w4BMUTPHh6UVSwiPGQ.woff2" as="font"
+    type="font/woff2" crossorigin />
+  <link
+    href="https://fonts.googleapis.com/css2?family=Lato:wght@400;700;900&family=Lora:wght@400;500;600;700&display=swap"
+    rel="stylesheet" />
 
-    <script type="application/ld+json">
+  <meta name="geo.region" content="NP-BA" />
+  <meta name="geo.placename" content="Nagarkot" />
+  <meta name="geo.position" content="27.7192;85.5143" />
+  <meta name="ICBM" content="27.7192, 85.5143" />
+
+  <meta property="og:type" content="website" />
+  <meta property="og:url" content="https://gadgadeschool.edu.np/" />
+  <meta property="og:title" content="Gadgade Basic School | Nagarkot, Bhaktapur" />
+  <meta property="og:description"
+    content="Official government, non-profit basic school providing quality, free education up to Grade 8 in Nagarkot, Bhaktapur." />
+  <meta property="og:image" content="https://res.cloudinary.com/dph6mqggr/image/upload/v1762218893/banner_cj0zgv.jpg" />
+  <meta property="og:site_name" content="Gadgade Basic School" />
+
+  <meta property="twitter:card" content="summary_large_image" />
+  <meta property="twitter:url" content="https://gadgadeschool.edu.np/" />
+  <meta property="twitter:title" content="Gadgade Basic School | Nagarkot, Bhaktapur" />
+  <meta property="twitter:description"
+    content="Official government, non-profit basic school providing quality, free education up to Grade 8 in Nagarkot, Bhaktapur." />
+  <meta property="twitter:image"
+    content="https://res.cloudinary.com/dph6mqggr/image/upload/v1762218893/banner_cj0zgv.jpg" />
+  <meta name="apple-mobile-web-app-capable" content="yes" />
+  <meta name="mobile-web-app-capable" content="yes" />
+  <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
+  <meta name="apple-mobile-web-app-title" content="Gadgade School" />
+  <script type="application/ld+json">
       {
         "@context": "https://schema.org",
         "@type": "School",
@@ -125,78 +81,66 @@
       }
     </script>
 
-    <script src="https://cdn.tailwindcss.com"></script>
-    <script>
-      tailwind.config = {
-        darkMode: "class",
-        theme: {
-          extend: {
-            borderRadius: {
-              xl: "1rem",
-              "2xl": "1.5rem",
-              "3xl": "2rem",
+  <script src="https://cdn.tailwindcss.com"></script>
+  <script>
+    tailwind.config = {
+      darkMode: "class",
+      theme: {
+        extend: {
+          borderRadius: {
+            xl: "1rem",
+            "2xl": "1.5rem",
+            "3xl": "2rem",
+          },
+          fontFamily: {
+            sans: ["Lato", "sans-serif"],
+            serif: ["Lora", "serif"],
+          },
+          colors: {
+            "brand-navy": "#0A2540",
+            "brand-navy-light": "#1D3A5C",
+            "brand-gold": "#BFA181",
+            "brand-gold-light": "#D9C6B3",
+            "brand-cream": "#F6F5F2",
+            "brand-charcoal": "#121212",
+            "brand-charcoal-light": "#1E1E1E",
+            "text-dark": "#1E1E1E",
+            "text-medium": "#555555",
+            "text-light": "#E0E0E0",
+          },
+          keyframes: {
+            "fade-in-down": {
+              "0%": { opacity: "0", transform: "translateY(-20px)" },
+              "100%": { opacity: "1", transform: "translateY(0)" },
             },
-            fontFamily: {
-              sans: ["Lato", "sans-serif"],
-              serif: ["Lora", "serif"],
+            "fade-in-up": {
+              "0%": { opacity: "0", transform: "translateY(20px)" },
+              "100%": { opacity: "1", transform: "translateY(0)" },
             },
-            colors: {
-              "brand-navy": "#0A2540",
-              "brand-navy-light": "#1D3A5C",
-              "brand-gold": "#BFA181",
-              "brand-gold-light": "#D9C6B3",
-              "brand-cream": "#F6F5F2",
-              "brand-charcoal": "#121212",
-              "brand-charcoal-light": "#1E1E1E",
-              "text-dark": "#1E1E1E",
-              "text-medium": "#555555",
-              "text-light": "#E0E0E0",
-            },
-            keyframes: {
-              "fade-in-down": {
-                "0%": { opacity: "0", transform: "translateY(-20px)" },
-                "100%": { opacity: "1", transform: "translateY(0)" },
-              },
-              "fade-in-up": {
-                "0%": { opacity: "0", transform: "translateY(20px)" },
-                "100%": { opacity: "1", transform: "translateY(0)" },
-              },
-              float: {
-                "0%, 100%": { transform: "translateY(0)" },
-                "50%": { transform: "translateY(-10px)" },
-              },
-            },
-            animation: {
-              "fade-in-down": "fade-in-down 0.8s ease-out forwards",
-              "fade-in-up": "fade-in-up 0.8s ease-out forwards",
-              float: "float 3s ease-in-out infinite",
+            float: {
+              "0%, 100%": { transform: "translateY(0)" },
+              "50%": { transform: "translateY(-10px)" },
             },
           },
+          animation: {
+            "fade-in-down": "fade-in-down 0.8s ease-out forwards",
+            "fade-in-up": "fade-in-up 0.8s ease-out forwards",
+            float: "float 3s ease-in-out infinite",
+          },
         },
-      };
-    </script>
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Lato:wght@400;700;900&family=Lora:wght@400;500;600;700&display=swap"
-      rel="stylesheet"
-    />
-  </head>
-  <body
-    class="bg-brand-cream text-text-dark dark:bg-brand-charcoal dark:text-text-light"
-  >
-    <!-- Google Tag Manager (noscript) -->
-    <noscript
-      ><iframe
-        src="https://www.googletagmanager.com/ns.html?id=GTM-KNTZH85D"
-        height="0"
-        width="0"
-        style="display: none; visibility: hidden"
-      ></iframe
-    ></noscript>
-    <!-- End Google Tag Manager (noscript) -->
-    <div id="root"></div>
-    <script type="module" src="./index.tsx"></script>
-    <script type="module" src="/index.tsx"></script>
-  </body>
+      },
+    };
+  </script>
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+  <link
+    href="https://fonts.googleapis.com/css2?family=Lato:wght@400;700;900&family=Lora:wght@400;500;600;700&display=swap"
+    rel="stylesheet" />
+</head>
+
+<body class="bg-brand-cream text-text-dark dark:bg-brand-charcoal dark:text-text-light">
+  <div id="root"></div>
+  <script type="module" src="/index.tsx"></script>
+</body>
+
 </html>
